--- a/package.json
+++ b/package.json
@@ -17,10 +17,16 @@
   },
   "homepage": "https://github.com/Malha3/PyteachBack#readme",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "mysql": "^2.18.1"
+    "express-jwt": "^6.0.0",
+    "joi": "^17.2.1",
+    "jsonwebtoken": "^8.5.1",
+    "mysql2": "^2.2.5",
+    "rootpath": "^0.1.2",
+    "sequelize": "^6.3.5"
   }
 }
