--- a/package.json
+++ b/package.json
@@ -28,5 +28,8 @@
     "mysql2": "^2.2.5",
     "rootpath": "^0.1.2",
     "sequelize": "^6.3.5"
+  },
+  "devDependencies": {
+    "sequelize-cli": "^6.2.0"
   }
 }
