--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "sequelize": "^6.3.5"
   },
   "devDependencies": {
+    "grunt-apidoc": "^0.11.0",
     "sequelize-cli": "^6.2.0"
   },
   "apidoc": {
